data/derived/sp14/progs/unify/prog3366.ml.out
Characters 96-101:
  1::count
     ^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
